--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>Hello Wolrd</h1>
     <h2>East world</h2>
     <h2>West world</h2>
-
+    <h3>Australia</h3>
+    <h3>North Pole</h3>
 </body>
 </html>
