add table countries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link rel="stylesheet" href="table.css">
     <title>Document</title>
 </head>
 <body>
@@ -14,5 +15,13 @@
     <h2>West world</h2>
     <h3>Australia</h3>
     <h3>North Pole</h3>
+    <table>
+        <th>Countries</th>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
 </body>
 </html>
