add video inframe

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
             <td></td>
         </tr>
     </table>
+
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Uwzg7SYZKF0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
