--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="video.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Wolrd</h1>
+    <h1>Hello World</h1>
     <h2>East world</h2>
     <h2>West world</h2>
     <h3>Australia</h3>
