--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <table>
         <th>Countries</th>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>French</td>
+            <td>Europe</td>
+            <td>North</td>
         </tr>
     </table>
 </body>
